# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  help.py
gendiff/comparison/: comparison.py  comparison_json.py  comparison_yaml.py  constants_status.py  get_format.py  get_tree.py  parser_format.py
gendiff/comparison/formatters/: comparison_json.py  comparison_yaml.py  get_format.py  plain.py  stylish.py
gendiff/comprasion/: comparison.py
gendiff/scripts/: comparison.py  comparsion.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file_deep1.yml  file_deep2.json  file_deep2.yml  result_json.py  result_plain.py  result_stylish.py  result_stylish.txt
