[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Svet Ivanov <svetoslav.bc@gmail.com>"]
packages = [
	{ include = "gendiff"},
	]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
comparison = "gendiff.scripts.comparison:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
